--- a/hotel-web/src/main/resources/templates/index.html
+++ b/hotel-web/src/main/resources/templates/index.html
@@ -1,10 +1,342 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <title>Holiday</title>
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,700" rel="stylesheet"
+          type="text/css"/>
+    <link th:href="@{/css/font-awesome.min.css}" rel="stylesheet"/>
+    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
+    <link th:href="@{/css/bootstrap-datetimepicker.min.css}" rel="stylesheet"/>
+    <link th:href="@{/css/flexslider.css}" rel="stylesheet"/>
+    <link th:href="@{/css/templatemo-style.css}" rel="stylesheet"/>
 </head>
-<body>
-<h1>Hello</h1>
+
+<body class="tm-gray-bg">
+<div th:replace="fragments/header :: header"></div>
+
+<!-- Banner -->
+<section class="tm-banner">
+    <!-- Flexslider -->
+    <div class="flexslider flexslider-banner">
+        <ul class="slides">
+            <li>
+                <div class="tm-banner-inner">
+                    <h1 class="tm-banner-title">
+                        Phòng <span class="tm-yellow-text">Tốt nhất</span>
+                    </h1>
+                    <p class="tm-banner-subtitle">Cho kì nghỉ của bạn</p>
+                </div>
+                <img th:src="@{/img/banner-2.jpg}" alt="Image"/>
+            </li>
+            <li>
+                <div class="tm-banner-inner">
+                    <h1 class="tm-banner-title">
+                        Dịch vụ <span class="tm-yellow-text">Tốt nhất</span>
+                    </h1>
+                    <p class="tm-banner-subtitle">Cho những trải nghiệm thú vị</p>
+                </div>
+                <img th:src="@{/img/banner-3.jpg}" alt="Image"/>
+            </li>
+        </ul>
+    </div>
+</section>
+
+<!-- gray bg -->
+<section class="container tm-home-section-1" id="more">
+    <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-6">
+            <!-- Nav tabs -->
+            <div class="tm-home-box-1">
+                <ul class="nav nav-tabs tm-white-bg" role="tablist" id="hotelCarTabs">
+                    <li role="presentation" class="active">
+                        <a href="#hotel" aria-controls="hotel" role="tab" data-toggle="tab">Tìm phòng</a>
+                    </li>
+                </ul>
+
+                <!-- Tab panes -->
+                <div class="tab-content">
+                    <div role="tabpanel" class="tab-pane fade in active tm-white-bg" id="hotel">
+                        <div class="tm-search-box effect2">
+                            <form action="#" method="post" class="hotel-search-form">
+                                <div class="tm-form-inner">
+                                    <div class="form-group">
+                                        <select class="form-control">
+                                            <option value="">-- Chọn loại phòng --</option>
+                                            <option value="shangrila">Phòng tiêu chuẩn</option>
+                                            <option value="chatrium">Phòng VIP</option>
+                                            <option value="fourseasons">...</option>
+                                            <option value="hilton">...</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="input-group date" id="datetimepicker1">
+                                            <input type="text" class="form-control" placeholder="Ngày đến"/>
+                                            <span class="input-group-addon">
+                          <span class="fa fa-calendar"></span>
+                        </span>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="input-group date" id="datetimepicker2">
+                                            <input type="text" class="form-control" placeholder="Ngày đi"/>
+                                            <span class="input-group-addon">
+                          <span class="fa fa-calendar"></span>
+                        </span>
+                                        </div>
+                                    </div>
+                                    <div class="form-group margin-bottom-0">
+                                        <select class="form-control">
+                                            <option value="">-- Số lượng --</option>
+                                            <option value="1">1</option>
+                                            <option value="2">2</option>
+                                            <option value="3">3</option>
+                                            <option value="4">4</option>
+                                            <option value="5p">5+</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form-group tm-yellow-gradient-bg text-center">
+                                    <button type="submit" name="submit" class="tm-yellow-btn">
+                                        Tìm phòng ngay
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div role="tabpanel" class="tab-pane fade tm-white-bg" id="car">
+                        <div class="tm-search-box effect2">
+                            <form action="#" method="post" class="hotel-search-form">
+                                <div class="tm-form-inner">
+                                    <div class="form-group">
+                                        <select class="form-control">
+                                            <option value="">-- Select Model --</option>
+                                            <option value="shangrila">BMW</option>
+                                            <option value="chatrium">Mercedes-Benz</option>
+                                            <option value="fourseasons">Toyota</option>
+                                            <option value="hilton">Honda</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="input-group date-time" id="datetimepicker3">
+                                            <input type="text" class="form-control" placeholder="Pickup Date"/>
+                                            <span class="input-group-addon">
+                          <span class="fa fa-calendar"></span>
+                        </span>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="input-group date-time" id="datetimepicker4">
+                                            <input type="text" class="form-control" placeholder="Return Date"/>
+                                            <span class="input-group-addon">
+                          <span class="fa fa-calendar"></span>
+                        </span>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <select class="form-control">
+                                            <option value="">-- Options --</option>
+                                            <option value="">Child Seat</option>
+                                            <option value="">GPS Navigator</option>
+                                            <option value="">Insurance</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form-group tm-yellow-gradient-bg text-center">
+                                    <button type="submit" name="submit" class="tm-yellow-btn">
+                                        Check Now
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-4 col-md-4 col-sm-6">
+            <div class="tm-home-box-1 tm-home-box-1-2 tm-home-box-1-center">
+                <img th:src="@{/img/index-01.jpg}" alt="image" class="img-responsive"/>
+                <div class="tm-green-gradient-bg tm-city-price-container">
+                    <span>SPA</span>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-6">
+            <div class="tm-home-box-1 tm-home-box-1-2 tm-home-box-1-right">
+                <img th:src="@{/img/index-02.jpg}" alt="image" class="img-responsive"/>
+                <div class="tm-red-gradient-bg tm-city-price-container">
+                    <span>Team Building</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- white bg -->
+<section class="tm-white-bg section-padding-bottom">
+    <div class="container">
+        <div class="row">
+            <div class="tm-section-header section-margin-top">
+                <div class="col-lg-4 col-md-3 col-sm-3">
+                    <hr/>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <h2 class="tm-section-title">Loại phòng</h2>
+                </div>
+                <div class="col-lg-4 col-md-3 col-sm-3">
+                    <hr/>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="tm-home-box-3">
+                    <div class="tm-home-box-3-img-container">
+                        <img th:src="@{/img/index-07.jpg}" alt="image" class="img-responsive"/>
+                    </div>
+                    <div class="tm-home-box-3-info">
+                        <p class="tm-home-box-3-description">
+                            Proin gravida nibhvell velit auctor aliquet. Aenean
+                            sollicitudin, lorem quis bibendum auctor, nisi elit consequat
+                            ipsum
+                        </p>
+                        <div class="tm-home-box-2-container">
+                            <a href="#" class="tm-home-box-2-link">
+                                <i class="fa fa-heart tm-home-box-2-icon border-right"></i>
+                            </a>
+                            <a th:href="@{/room-detail.html}" class="tm-home-box-2-link"><span
+                                    class="tm-home-box-2-description box-3">Khám
+                    phá</span></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="tm-home-box-3">
+                    <div class="tm-home-box-3-img-container">
+                        <img th:src="@{/img/index-08.jpg}" alt="image" class="img-responsive"/>
+                    </div>
+                    <div class="tm-home-box-3-info">
+                        <p class="tm-home-box-3-description">
+                            Proin gravida nibhvell velit auctor aliquet. Aenean
+                            sollicitudin, lorem quis bibendum auctor, nisi elit consequat
+                            ipsum
+                        </p>
+                        <div class="tm-home-box-2-container">
+                            <a href="#" class="tm-home-box-2-link">
+                                <i class="fa fa-heart tm-home-box-2-icon border-right"></i>
+                            </a>
+                            <a th:href="@{/room-detail.html}" class="tm-home-box-2-link"><span
+                                    class="tm-home-box-2-description box-3">Khám
+                    phá</span></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="tm-home-box-3">
+                    <div class="tm-home-box-3-img-container">
+                        <img th:src="@{/img/index-09.jpg}" alt="image" class="img-responsive"/>
+                    </div>
+                    <div class="tm-home-box-3-info">
+                        <p class="tm-home-box-3-description">
+                            Proin gravida nibhvell velit auctor aliquet. Aenean
+                            sollicitudin, lorem quis bibendum auctor, nisi elit consequat
+                            ipsum
+                        </p>
+                        <div class="tm-home-box-2-container">
+                            <a href="#" class="tm-home-box-2-link">
+                                <i class="fa fa-heart tm-home-box-2-icon border-right"></i>
+                            </a>
+                            <a th:href="@{/room-detail.html}" class="tm-home-box-2-link"><span
+                                    class="tm-home-box-2-description box-3">Khám
+                    phá</span></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="tm-home-box-3">
+                    <div class="tm-home-box-3-img-container">
+                        <img th:src="@{/img/index-10.jpg}" alt="image" class="img-responsive"/>
+                    </div>
+                    <div class="tm-home-box-3-info">
+                        <p class="tm-home-box-3-description">
+                            Proin gravida nibhvell velit auctor aliquet. Aenean
+                            sollicitudin, lorem quis bibendum auctor, nisi elit consequat
+                            ipsum
+                        </p>
+                        <div class="tm-home-box-2-container">
+                            <a href="#" class="tm-home-box-2-link">
+                                <i class="fa fa-heart tm-home-box-2-icon border-right"></i>
+                            </a>
+                            <a th:href="@{/room-detail.html}" class="tm-home-box-2-link"><span
+                                    class="tm-home-box-2-description box-3">Khám
+                    phá</span></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<div th:replace="fragments/footer :: footer"></div>
+
+<script type="text/javascript" th:src="@{/js/jquery-1.11.2.min.js}"></script>
+<!-- jQuery -->
+<script type="text/javascript" th:src="@{/js/moment.js}"></script>
+<!-- moment.js -->
+<script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
+<!-- bootstrap js -->
+<script type="text/javascript" th:src="@{/js/bootstrap-datetimepicker.min.js}"></script>
+<!-- bootstrap date time picker js, http://eonasdan.github.io/bootstrap-datetimepicker/ -->
+<script type="text/javascript" th:src="@{js/jquery.flexslider-min.js}"></script>
+<script type="text/javascript" th:src="@{/js/templatemo-script.js}"></script>
+<!-- Templatemo Script -->
+<script>
+    // HTML document is loaded. DOM is ready.
+    $(function () {
+        $("#hotelCarTabs a").click(function (e) {
+            e.preventDefault();
+            $(this).tab("show");
+        });
+
+        $(".date").datetimepicker({
+            format: "MM/DD/YYYY",
+        });
+        $(".date-time").datetimepicker();
+
+        // https://css-tricks.com/snippets/jquery/smooth-scrolling/
+        $("a[href*=#]:not([href=#])").click(function () {
+            if (
+                location.pathname.replace(/^\//, "") ==
+                this.pathname.replace(/^\//, "") &&
+                location.hostname == this.hostname
+            ) {
+                var target = $(this.hash);
+                target = target.length
+                    ? target
+                    : $("[name=" + this.hash.slice(1) + "]");
+                if (target.length) {
+                    $("html,body").animate(
+                        {
+                            scrollTop: target.offset().top,
+                        },
+                        1000
+                    );
+                    return false;
+                }
+            }
+        });
+    });
+    $(window).load(function () {
+        $(".flexslider").flexslider({
+            controlNav: false,
+        });
+    });
+</script>
 </body>
+
 </html>
