--- a/hotel-web/src/main/resources/templates/register.html
+++ b/hotel-web/src/main/resources/templates/register.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Hotel, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hotel | Template</title>
+    <title th:text="*{title}"></title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Taviraj:300,400,500,600,700,800,900&display=swap"
@@ -47,40 +47,33 @@
                 <div class="col-lg-6">
                     <div class="contact-form">
                         <h5>ĐĂNG KÝ TÀI KHOẢN</h5>
-                        <form action="#">
+                        <form th:action="@{register}" method="post" th:object="${registerRequest}">
                             <div class="row">
                                 <div class="col-lg-12">
                                     <p>Họ và tên</p>
                                     <div class="input-group">
-                                        <input type="text" placeholder="full name">
+                                        <input type="text" placeholder="full name" th:field="*{name}">
                                         <img th:src="@{/img/edit.png}" alt="">
                                     </div>
                                 </div>
                                 <div class="col-lg-12">
                                     <p>Số điện thoại</p>
                                     <div class="input-group">
-                                        <input type="number" placeholder="phone">
+                                        <input type="number" placeholder="phone" th:field="*{phone}">
                                         <img th:src="@{/img/edit.png}" alt="">
                                     </div>
                                 </div>
                                 <div class="col-lg-12">
                                     <p>Email</p>
                                     <div class="input-group">
-                                        <input type="email" placeholder="email">
+                                        <input type="email" placeholder="email" th:field="*{email}">
                                         <img th:src="@{/img/edit.png}" alt="">
-                                    </div>
-                                </div>
-                                <div class="col-lg-12">
-                                    <p>Tài khoản</p>
-                                    <div class="input-group">
-                                        <input type="text" placeholder="username">
-                                        <img th:src="@{img/edit.png}" alt="">
                                     </div>
                                 </div>
                                 <div class="col-lg-12">
                                     <p>Mật khẩu</p>
                                     <div class="input-group">
-                                        <input type="password" placeholder="password">
+                                        <input type="password" placeholder="password" th:field="*{password}">
                                         <img th:src="@{/img/edit.png}" alt="">
                                     </div>
                                 </div>
