--- a/hotel-webadmin/src/main/resources/templates/home.html
+++ b/hotel-webadmin/src/main/resources/templates/home.html
@@ -21,17 +21,7 @@
 	<!-- Header -->
 
 	<header class="header">
-		<div class="header_content d-flex flex-column align-items-center justify-content-lg-end justify-content-center">
-			
-			<!-- Logo -->
-			<div class="logo">
-				<a href="#">
-					<img class="logo_1" src="homepage/images/logo1.png" alt="">
-					<img class="logo_2" src="images/logo1.png" alt="">
-					<img class="logo_3" src="images/logo1.png" alt="">
-				</a>
-			</div>
-
+		<div class="d-flex flex-column align-items-center justify-content-lg-end justify-content-center">
 			<!-- Main Nav -->
 			<nav class="main_nav">
 					<ul
@@ -49,107 +39,21 @@
 				</nav>
 		</div>
 			<!-- Social -->
-		
 	</header>
-
-
-	<div>
-	<!-- Logo Overlay -->
-
-	<div class="logo_overlay">
-		<div class="logo_overlay_content d-flex flex-column align-items-center justify-content-center">
-			<div class="logo"><a href="#"><img src="homepage/images/logo_3.png" alt=""></a></div>
-		</div>
-	</div>
-
-	<!-- Menu Overlay -->
-
-	<div class="menu_overlay">
-		<div class="menu_overlay_content d-flex flex-row align-items-center justify-content-center">
-			
-			<!-- Hamburger Button -->
-			<div class="hamburger"><i class="fa fa-bars" aria-hidden="true"></i></div>
-
-		</div>
-	</div>
-
-	<!-- Menu -->
-
-	<div class="menu">
-		<div class="menu_container d-flex flex-column align-items-center justify-content-center">
-
-			<!-- Menu Navigation -->
-			
-
-			<!-- Menu Social -->
-			<div class="social menu_social">
-				<ul class="d-flex flex-row align-items-center justify-content-start">
-					<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-					<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-					<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-					<li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
-					<li><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
-				</ul>
-			</div>
-
-		</div>
-	</div>
 	<!-- Home -->
 
 	<div class="home">
 		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="homepage/images/home.jpg" data-speed="0.8"></div>
 		<div class="home_container d-flex flex-column align-items-center justify-content-center">
-			<div class="home_title"><h1>Matxa Hotel Management</h1></div>
-			<div class="home_text text-center">Trang quản lý khách sạn 5 sao Matxa</div>
+			<div class="home_title"><h1>Hotel Management</h1></div>
+			<div class="home_text text-center">Trang quản lý khách sạn</div>
 			<div th:if="${#request.userPrincipal == null}" class="button home_button"><a th:href="@{/login}">Đăng nhập</a></div>
 		</div>
 	</div>
-
-	
 	<!-- Footer -->
 
 	<footer class="footer">
 		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="homepage/images/footer.jpg" data-speed="0.8"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<div class="footer_logo text-center">
-						<a href="#"><img src="homepage/images/logo1.png" alt=""></a>
-					</div>
-					<div class="footer_content">
-						<div class="row">
-							<div class="col-lg-4 footer_col">
-								<div class="footer_info d-flex flex-column align-items-lg-end align-items-center justify-content-start">
-									<div class="text-center">
-										<div>Phone:</div>
-										<div>+546 990221 123</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-lg-4 footer_col">
-								<div class="footer_info d-flex flex-column align-items-center justify-content-start">
-									<div class="text-center">
-										<div>Address:</div>
-										<div>Main Str, no 23, New York</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-lg-4 footer_col">
-								<div class="footer_info d-flex flex-column align-items-lg-start align-items-center justify-content-start">
-									<div class="text-center">
-										<div>Mail:</div>
-										<div>hotel@contact.com</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="footer_bar text-center"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
-				</div>
-			</div>
-		</div>
 	</footer>
 </div>
 </div>
