--- a/hotel-webadmin/src/main/resources/templates/starter.html
+++ b/hotel-webadmin/src/main/resources/templates/starter.html
@@ -39,17 +39,7 @@
 
 		<header class="header" th:fragment="header(check)">
 			<div
-				class="header_content d-flex flex-column align-items-center justify-content-lg-end justify-content-center">
-
-				<!-- Logo -->
-				<div class="logo">
-					<a href="#"> 
-					<img class="logo_1" src="homepage/images/logo1.png" alt="Logo"> 
-					<img class="logo_2" src="homepage/images/logo1.png" alt="Logo"> 
-					<img class="logo_3" src="homepage/images/logo1.png" alt="Logo">
-					</a>
-				</div>
-
+				class="d-flex flex-column align-items-center justify-content-lg-end justify-content-center">
 				<!-- Main Nav -->
 				<nav class="main_nav">
 					<ul
@@ -67,7 +57,6 @@
 				</nav>
 			</div>
 			<!-- Social -->
-
 		</header>
 
 		<!-- Logo Overlay -->
