--- a/hotel-webadmin/src/main/resources/templates/check-out.html
+++ b/hotel-webadmin/src/main/resources/templates/check-out.html
@@ -217,11 +217,11 @@
 					$('#note').val(data.note);
 					$('#total-pay').val(data.total);
 
-					$('#price').simpleMoneyFormat();
-					$('#rent').simpleMoneyFormat();
-					$('#food').simpleMoneyFormat();
-					$('#service').simpleMoneyFormat();
-					$('#total').simpleMoneyFormat();
+					// $('#price').simpleMoneyFormat();
+					// $('#rent').simpleMoneyFormat();
+					// $('#food').simpleMoneyFormat();
+					// $('#service').simpleMoneyFormat();
+					// $('#total').simpleMoneyFormat();
 				});
 			});
 
