--- a/hotel-webadmin/src/main/resources/templates/starter.html
+++ b/hotel-webadmin/src/main/resources/templates/starter.html
@@ -97,46 +97,12 @@
 		<!-- Footer -->
 
 		<footer class="footer">
-			<div class="parallax_background parallax-window"
+			<div class="parallax_background"
 				data-parallax="scroll" data-image-src="homepage/images/footer.jpg"
 				data-speed="0.8"></div>
 			<div class="container">
 				<div class="row">
 					<div class="col">
-						<div class="footer_logo text-center">
-							<a href="#"><img src="homepage/images/logo1.png" alt=""></a>
-						</div>
-						<div class="footer_content">
-							<div class="row">
-								<div class="col-lg-4 footer_col">
-									<div
-										class="footer_info d-flex flex-column align-items-lg-end align-items-center justify-content-start">
-										<div class="text-center">
-											<div>Phone:</div>
-											<div>+546 990221 123</div>
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-4 footer_col">
-									<div
-										class="footer_info d-flex flex-column align-items-center justify-content-start">
-										<div class="text-center">
-											<div>Address:</div>
-											<div>Main Str, no 23, New York</div>
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-4 footer_col">
-									<div
-										class="footer_info d-flex flex-column align-items-lg-start align-items-center justify-content-start">
-										<div class="text-center">
-											<div>Mail:</div>
-											<div>hotel@contact.com</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
 						<div class="footer_bar text-center">
 							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 							Copyright &copy; 2019 All rights reserved | This template is made
